# python-authlib-example

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/python_authlib_example/: __init__.py
