[project]
name = "python-authlib-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hiroshi Sano", email = "hrs.sano645@gmail.com" }
]
dependencies = [
    "authlib>=1.2.1",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
